# hidapi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
cmake/: doxygen.cmake
cmake_multi_os/: CMakeLists.txt  release_linux.cmake  release_macos.cmake  release_windows.cmake
docs/: install_doxygen.txt
docs/doxygen/: Doxyfile.in
hidapi/: hidapi.h
windows/: hid.c
